--- a/assets/stylesheets/_type.scss
+++ b/assets/stylesheets/_type.scss
@@ -59,10 +59,6 @@ h3 {
 
 p {
   margin-bottom: $line-height-computed;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 small,
